[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Semen Oskolkov <oskolkovsemen@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
sort = 'algorithms.sort:main'
search = 'algorithms.get_by_date:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
